[gd_scene load_steps=7 format=3 uid="uid://0x1fkar36bkx"]

[ext_resource type="Script" uid="uid://peqvsdoswhbg" path="res://UI/main.gd" id="1_6vb77"]
[ext_resource type="Texture2D" uid="uid://brdfm8hrhy1v0" path="res://UI/Background.png" id="2_dcm1j"]
[ext_resource type="AudioStream" uid="uid://gvxbpaccrdmi" path="res://UI/sound/Music/Goblins_Den__Regular_.mp3" id="3_2cxiq"]

[sub_resource type="Animation" id="Animation_kqmha"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Main:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_md5w6"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Main:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e6xo8"]
_data = {
&"RESET": SubResource("Animation_kqmha"),
&"fade_out": SubResource("Animation_md5w6")
}

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6vb77")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dcm1j")

[node name="Main" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -242.0
offset_right = 158.5
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="MenuButton" parent="Main"]
layout_mode = 0
offset_right = 317.0
offset_bottom = 106.0
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Play
"

[node name="Options" type="MenuButton" parent="Main"]
layout_mode = 0
offset_top = 126.0
offset_right = 317.0
offset_bottom = 232.0
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Options
"

[node name="Credits" type="MenuButton" parent="Main"]
layout_mode = 0
offset_top = 252.0
offset_right = 317.0
offset_bottom = 358.0
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Credits
"

[node name="Exit" type="MenuButton" parent="Main"]
layout_mode = 0
offset_top = 378.0
offset_right = 317.0
offset_bottom = 484.0
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -242.0
offset_right = 158.5
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2

[node name="Volume" type="MenuButton" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -192.0
offset_right = 158.5
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Volume
"

[node name="Resolution" type="MenuButton" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -92.0
offset_right = 158.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Resolution
"

[node name="OptionsBack" type="MenuButton" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = 8.0
offset_right = 158.5
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Back
"

[node name="Volume" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MusicLabel" type="Label" parent="Volume"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 581.0
offset_top = 119.0
offset_right = 647.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Music"

[node name="Music" type="HSlider" parent="Volume"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 502.0
offset_top = 161.0
offset_right = 730.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0

[node name="SFXLabel" type="Label" parent="Volume"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.499
anchor_top = 0.42900002
anchor_right = 0.499
anchor_bottom = 0.42900002
offset_left = 593.04
offset_top = 223.83998
offset_right = 637.04
offset_bottom = 271.84
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "SFX"

[node name="SFX" type="HSlider" parent="Volume"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 503.0
offset_top = 266.0
offset_right = 731.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0

[node name="VolumeBack" type="MenuButton" parent="Volume"]
layout_mode = 0
offset_left = 482.0
offset_top = 308.0
offset_right = 799.0
offset_bottom = 414.0
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Back
"

[node name="Resolution" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 617.0
offset_top = 281.0
offset_right = 657.0
offset_bottom = 321.0

[node name="ResolutionLabel" type="Label" parent="Resolution"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -66.0
offset_right = 67.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Resolutions"

[node name="ResolutionButton" type="OptionButton" parent="Resolution"]
layout_mode = 0
offset_left = 100.0
offset_top = -31.0
offset_right = 132.0
offset_bottom = -11.0

[node name="FullscreenLabel" type="Label" parent="Resolution"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -11.0
offset_right = 70.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Fullscreen"

[node name="FullscreenCheck" type="CheckBox" parent="Resolution"]
layout_mode = 0
offset_left = 103.0
offset_top = 22.0
offset_right = 127.0
offset_bottom = 46.0

[node name="ResolutionBack" type="MenuButton" parent="Resolution"]
layout_mode = 0
offset_left = -118.0
offset_top = 44.0
offset_right = 199.0
offset_bottom = 150.0
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Back
"

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -242.0
offset_right = 158.5
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Credits"]
layout_mode = 0
offset_right = 405.0
offset_bottom = 207.0
text = "GAME ASSETS
https://pixelfrog-assets.itch.io/tiny-swords
MUSIC
https://leohpaz.itch.io/minifantasy-dungeon-sfx-pack
MENU BACKGROUND
https://edermunizz.itch.io/free-pixel-art-forest"

[node name="CreditsBack" type="MenuButton" parent="Credits"]
layout_mode = 0
offset_top = 250.0
offset_right = 317.0
offset_bottom = 356.0
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Back
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AudioStreamPlayer")
libraries = {
&"": SubResource("AnimationLibrary_e6xo8")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2cxiq")
autoplay = true
bus = &"Music"
parameters/looping = true

[connection signal="pressed" from="Main/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Main/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/Volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="Options/Resolution" to="." method="_on_resolution_pressed"]
[connection signal="pressed" from="Options/OptionsBack" to="." method="_on_options_back_pressed"]
[connection signal="value_changed" from="Volume/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Volume/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Volume/VolumeBack" to="." method="_on_volume_back_pressed"]
[connection signal="item_selected" from="Resolution/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="toggled" from="Resolution/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="pressed" from="Resolution/ResolutionBack" to="." method="_on_resolution_back_pressed"]
[connection signal="pressed" from="Credits/CreditsBack" to="." method="_on_credits_back_pressed"]
